[スレッド作成ページ /thread/newへのルーティング設定の完了]

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,18 @@
   text-align: center;
 }
 
-.threads {
-  
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.headname {
+  color: white;
+}
+.Header {
+  background-color: lime;
+  height: 50px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
