--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,38 @@
   text-align: center;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-.headname {
-  color: white;
-}
 .Header {
   background-color: lime;
   height: 50px;
+}
+
+.ThreadsPage {
+  color: white;
+  margin-left: 50px;
+  font-size: 25px;
+}
+
+.newthread {
+  color: white;
+  font-size: 25px;
+}
+
+.label {
+  margin: 0 auto;
+  width: fit-content;
+}
+
+.Threads {
+  height: 600px;
+  margin: 0 auto;
+  width: fit-content;
+}
+
+.ThreadTitle {
+  list-style: none;
+  border: 2px solid;
+  margin-bottom: 5px;
+  background-color: white;
 }
 
 @media (prefers-reduced-motion: no-preference) {
